# intellij-bazel-test

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod  main.go  main_test.go
pkg/: BUILD.bazel  test.go
