load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

# gazelle:prefix github.com/sbueringer/intellij-bazel-test

load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    prefix = "github.com/sbueringer/intellij-bazel-test",
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/sbueringer/intellij-bazel-test",
    visibility = ["//visibility:private"],
    deps = ["//pkg:go_default_library"],
)

go_binary(
    name = "test",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
